--- a/helper/helper.csproj
+++ b/helper/helper.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\configuracion\configuracion.csproj">
+      <Project>{95fb165b-2054-4fdc-b799-e452d9f6d2cd}</Project>
+      <Name>configuracion</Name>
+    </ProjectReference>
     <ProjectReference Include="..\dominio\dominio.csproj">
       <Project>{8a88a3b2-5057-4b22-b793-f5ee1f741957}</Project>
       <Name>dominio</Name>
