--- a/configuracion/configuracion.csproj
+++ b/configuracion/configuracion.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{13735923-508F-4CC5-9A4D-2D7C925CEF5F}</ProjectGuid>
+    <ProjectGuid>{95FB165B-2054-4FDC-B799-E452D9F6D2CD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>negocio</RootNamespace>
-    <AssemblyName>negocio</AssemblyName>
+    <RootNamespace>configuracion</RootNamespace>
+    <AssemblyName>configuracion</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,21 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccesoDB.cs" />
-    <Compile Include="CategoriaNegocio.cs" />
-    <Compile Include="MarcaNegocio.cs" />
-    <Compile Include="ProductoNegocio.cs" />
+    <Compile Include="Opciones.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\configuracion\configuracion.csproj">
-      <Project>{95fb165b-2054-4fdc-b799-e452d9f6d2cd}</Project>
-      <Name>configuracion</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\dominio\dominio.csproj">
-      <Project>{8a88a3b2-5057-4b22-b793-f5ee1f741957}</Project>
-      <Name>dominio</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
