--- a/presentación/presentación.csproj
+++ b/presentación/presentación.csproj
@@ -214,6 +214,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="fmrAgregarProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fmrAgregarProducto.Designer.cs">
+      <DependentUpon>fmrAgregarProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -240,6 +246,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="fmrAgregarProducto.resx">
+      <DependentUpon>fmrAgregarProducto.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
