--- a/helper/helper.csproj
+++ b/helper/helper.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -44,7 +45,9 @@
   <ItemGroup>
     <Compile Include="ComboBoxOptions.cs" />
     <Compile Include="listaDesplegable.cs" />
+    <Compile Include="Metodos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validacion.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\configuracion\configuracion.csproj">
