--- a/dominio/dominio.csproj
+++ b/dominio/dominio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Categoria.cs" />
     <Compile Include="Marca.cs" />
+    <Compile Include="Presupuesto.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
