--- a/presentación/App.config
+++ b/presentación/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
 	<appSettings>
-		<add key="images-folder" value="C:\imageApp\"/>
+		<add key="imageApp" value="C:\imageApp\"/>
 	</appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
